# findMyChat

./: .gitignore  README.md  notebook.ipynb  requirements.txt  video_embeddings.npy  youtube_transcripts.py
backend/: app.py  podcast.db  youtube_services.py
frontend/podcast/: package-lock.json  package.json
frontend/podcast/public/: index.html
frontend/podcast/src/: App.css  App.js
frontend/podcast/src/components/: APIServices.js  SearchInput.css  SearchInput.js  videoslist.js
src/: .gitignore
src/backend/: Dockerfile  app.py  docker-compose.yml  main.py  podcast.db  pyproject.toml  requirements.txt  youtube_services.py
src/backend/routes/: search.py  verify_gmail.py  verify_telegram.py
src/backend/services/: celery_config.py  gmail_tasks.py  models.py  process_gmail.py  process_telegram.py  progress_tracker.py  vault_encryption.py
src/frontend/: components.json  index.html  package-lock.json  package.json  vite.config.js
src/frontend/public/: manifest.json
src/frontend/src/: App.jsx  index.css  main.jsx
src/frontend/src/components/: SearchInput.css  SearchInput.js  videolist.css  videoslist.js
src/frontend/src/components/ui/: card.jsx
src/frontend/src/pages/: LoadingPage.jsx  googleOAuth.jsx  searchPage.jsx  telegramOAuth.jsx
